Add BookRepository, BookService, and GameSession classes with tests and implement the GlobalExceptionHandler to deal with exceptions, This should be improved while the code is progressing.